fix overlaping text in cards

--- a/public/css/mediumish.css
+++ b/public/css/mediumish.css
@@ -80,11 +80,15 @@ section {
 
 .listfeaturedtag .thumbnail {
     background-size: cover;
-    height: 100%;
+    height: 50%;
     display: block;
     background-position: 38% 22% !important;
     background-origin: border-box!important;
     border-top-left-radius: 2px;
+}
+
+.card-block {
+    height: 50%;
 }
 
 .listfeaturedtag .card-block {
@@ -110,13 +114,17 @@ section {
 }
 
 .card-text {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    display: -webkit-box !important;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
     white-space: normal;
+    height: 50px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* overflow: hidden;
+    height: 4.8rem;
+    text-overflow: ellipsis;
+    display: block;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: horizontal;
+    white-space: normal; */
 }
 
 .listfeaturedtag h4.card-text,
@@ -404,7 +412,7 @@ blockquote {
 
 .card {
     border-radius: 4px;
-    min-height: 27rem;
+    height: 27rem;
 }
 
 .card .img-thumb {
